# Note-to-AI

./: .gitignore  Cargo.toml  README.md  handOFF.txt
.github/workflows/: test.yml
benches/: performance_tests.rs
config/: config.toml
docs/: testing.md
models/: M1_DEPLOYMENT_GUIDE.md  README.md  convert_to_mlx.py  download-specialized-models.sh  finalize_deployment.py  fix_deployment.py  m1_deployment_config.json  m1_production_config.json  m1_production_ready.json  model_registry.toml  monitor_performance.py  performance_metrics.json  test_m1_deployment.py  usage_examples.json
scripts/: download-models.sh  install.sh  setup-swarm.sh  test.sh
src/: lib.rs  logger.rs  main.rs
src/ai/: api_client.rs  context.rs  hermes_integration.rs  local_llm.rs  mod.rs  model_switcher.rs
src/audio/: whisper.rs
src/config/: settings.rs
src/crypto/: blake3_hasher.rs  hybrid_crypto.rs  keys.rs  mod.rs  pq_vault.rs  zk_proofs.rs
src/identity/: british_passport.rs  mod.rs  passport_nfc.rs  spam_filter.rs  zk_circuits.rs  zkpassport.rs
src/scheduler/: mod.rs  tasks.rs
src/signal/: client.rs  crypto.rs  mod.rs  protocol.rs
src/swarm/: discovery.rs  ipfs.rs  mod.rs  sync.rs
src/vault/: cache.rs  crdt.rs  embeddings.rs  indexer.rs  mod.rs  parser.rs  search.rs
src/vault/storage/: duckdb_store.rs  hybrid_engine.rs  lance_store.rs  mod.rs
tests/: integration_tests.rs  performance_tests.rs  property_tests.rs
