[package]
name = "note-to-ai"
version = "0.1.0"
edition = "2021"
authors = ["D8N1"]
description = "Local-first Obsidian vault manager with IPFS, CRDTs, and quantum-resistant crypto"
bench = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.29", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.0"
ed25519-dalek = "2.0"
libp2p = { version = "0.53", features = ["tokio", "macros"] }
automerge = "0.4"
walkdir = "2.5"
notify = "6.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
pulldown-cmark = "0.9"
yaml-rust = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.0"
insta = { version = "1.34", features = ["glob"] }
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "performance_tests"
harness = false

