[package]
name = "note-to-ai"
version = "0.1.0"
edition = "2021"
authors = ["D8N1"]
description = "Local-first Obsidian vault manager with IPFS, CRDTs, and quantum-resistant crypto"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Database - TEMPORARILY SIMPLIFIED while Arrow ecosystem stabilizes
# duckdb = "0.9"                        # Temporarily disabled due to Arrow conflicts
# lance = "0.10"                        # Temporarily disabled due to Arrow conflicts
# Will re-enable once Arrow chrono trait conflicts are resolved upstream

# Legacy support (keeping for compatibility)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.30", features = ["bundled", "backup", "blob"] }

# Error handling & async
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# Time & crypto
chrono = { version = "0.4", features = ["serde", "std"] }
blake3 = "1.5"
ed25519-dalek = "2.0"

# P2P & CRDT
libp2p = { version = "0.53", features = ["tokio", "macros"] }
automerge = "0.4"

# File system & utilities
walkdir = "2.5"
notify = "6.0"
regex = "1.0"

# Markdown parsing
pulldown-cmark = "0.10"                    # Updated for TagEnd compatibility
yaml-rust = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.0"
insta = { version = "1.34", features = ["glob"] }
criterion = "0.5"

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "performance_tests"
harness = false

[features]
# No migration needed - clean start with hybrid storage
default = []

[patch.crates-io]
# Using published crates for better compatibility