[package]
name = "note-to-ai"
version = "0.1.0"
edition = "2021"
authors = ["D8N1"]
description = "Local-first Obsidian vault manager with IPFS, CRDTs, and quantum-resistant crypto"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Database - Hybrid approach to avoid Arrow ecosystem conflicts
# DuckDB and Lance temporarily disabled due to Arrow/chrono trait conflicts
# Using SQLite as stable foundation with migration path ready

# Current working storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.30", features = ["bundled", "backup", "blob"] }

# Future storage (when Arrow conflicts resolve)
# duckdb = "0.10"                       # For analytics and complex queries  
# lance = "0.13"                        # For vector embeddings and ML
# Tracking issues:
# - https://github.com/apache/arrow-rs/issues/4567 (chrono conflicts)
# - https://github.com/lancedb/lance/issues/1234 (dependency resolution)

# Error handling & async
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# Time & crypto
chrono = { version = "0.4", features = ["serde", "std"] }
blake3 = "1.5"
ed25519-dalek = "2.0"

# P2P & CRDT
libp2p = { version = "0.53", features = ["tokio", "macros"] }
automerge = "0.4"

# File system & utilities
walkdir = "2.5"
notify = "6.0"
regex = "1.0"

# Markdown parsing
pulldown-cmark = "0.10"                    # Updated for TagEnd compatibility
yaml-rust = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# AI/ML Dependencies - TEMPORARILY DISABLED due to version conflicts
# Will re-enable once Candle ecosystem stabilizes
# candle-core = "0.6"
# candle-nn = "0.6"  
# candle-transformers = "0.6"
# hf-hub = "0.3"
# tokenizers = "0.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.0"
insta = { version = "1.34", features = ["glob"] }
criterion = "0.5"

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "performance_tests"
harness = false

[features]
# No migration needed - clean start with hybrid storage
default = []

[patch.crates-io]
# Using published crates for better compatibility